# agentic-rag-compliance-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
app/agent/tools/: __init__.py  legal_reference_validator.py  tao_calculator.py
app/eval/: __init__.py  dataset.py  judge.py  metrics.py  prompts.py  runner.py
app/llm/: __init__.py  dummy.py  provider.py  text.py
app/load_test/: __init__.py  chart.py  runner.py  scenarios.py  timing.py
app/rag/: __init__.py  bm25.py  ingestion.py  prompts.py  retriever.py  splitter.py  subgraph.py
app/ui/: __init__.py  streamlit_app.py
data/documents/: .gitkeep  SOURCES.md  sample_afa.md  sample_tao.md
data/eval/: questions.json  questions_smoke.json
docs/: .gitkeep  architecture.md
eval/: eval_dataset.json  load_test.py  run_eval.py
reports/: README.md  eval_aya8b.csv  eval_aya8b_hybrid_smoke.csv  load_test_dummy_n100_per_node.csv  load_test_dummy_n100_per_query.csv
scripts/: debug_query.py  smoke_retrieval.py
tests/: test_agent.py  test_bm25.py  test_config.py  test_eval.py  test_llm_provider.py  test_load_test.py  test_rag.py  test_source_filter.py  test_tools.py
ui/: streamlit_app.py
