[project]
name = "agentic-rag-compliance-assistant"
version = "0.1.0"
description = "Agentic RAG chatbot for Hungarian tax & accounting compliance (demo project)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "AI Engineer" }]

dependencies = [
    # --- Core / agentic framework ---
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-chroma>=0.1.4",

    # --- Vector store & embeddings ---
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",

    # --- PDF parsing ---
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",

    # --- UI ---
    "streamlit>=1.36.0",

    # --- Utilities ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "httpx>=0.27.0",

    # --- Eval / load test ---
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
